PXEPR-1510-prerender form container large edit

--- a/src/assets/scss/01_base/_utilities.scss
+++ b/src/assets/scss/01_base/_utilities.scss
@@ -439,7 +439,7 @@ $colors: (
 	max-width: $input-width;
 	margin: 0 auto;
 
-	&--large {
+	&.form-container--large {
 		&,
 		.form-control-case {
 			max-width: $input-width-large;
