PXEPR-1609-improvement public pages edit

--- a/src/common/ui/header/header.component.scss
+++ b/src/common/ui/header/header.component.scss
@@ -9,16 +9,16 @@
 
 
 .header {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
 	height: $header-height;
+	background-color: $body-bg;
 	color: $white;
 	z-index: $zindex-header;
 
 	&--public {
-		position: fixed;
 		background-color: $body-bg-lp;
 	}
 
