--- a/src/static/pages/landing/landing.component.html
+++ b/src/static/pages/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div class="landing-page">
-    <div class="section">
+    <div class="section section--first">
         <div class="container-fluid container-fluid--max-width">
             <div class="row align-items-md-center">
                 <div class="col-12 col-md-5 col-xl-6 order-md-2 mb-3 mb-md-0">
