--- a/src/app/pages/public/sign-up/sign-up.component.html
+++ b/src/app/pages/public/sign-up/sign-up.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid container-fluid--max-width">
         <div class="row no-gutters">
             <div class="col-xl-6">
-                <div class="section__half">
+                <div class="section__half pt-6">
                     <div class="row">
                         <div class="col-md-8 offset-md-2 col-xl-10 offset-xl-0">
                             <h1 class="h2--public mb-2">Založte si účet zdarma</h1>
