--- a/src/assets/scss/05_pages/public-pages.scss
+++ b/src/assets/scss/05_pages/public-pages.scss
@@ -18,24 +18,15 @@
 	position: relative;
 	overflow: hidden;
 
-	&:first-child {
-		padding-top: ( $header-height + ( $spacer * .75 ) );
-
-		// Media queries
-		@include media-breakpoint-up(md) {
-			padding-top: ( $header-height + ( $spacer * 3 ) );
-		}
-		@include media-breakpoint-up(xl) {
-			padding-top: ( $header-height + ( $spacer * 1.5 ) );
-		}
-	}
-
 	&__half {
 		padding: ( $spacer * 2.5 ) 0;
 
 		// Media queries
 		@include media-breakpoint-up(md) {
 			padding: ( $spacer * 5 ) 0;
+		}
+		@include media-breakpoint-up(xl) {
+			padding-bottom: 0;
 		}
 
 		&::before {
@@ -65,6 +56,14 @@
 			}
 		}
 
+		&--dark-gray,
+		&--gradient-violet {
+			// Media queries
+			@include media-breakpoint-up(xl) {
+				padding-bottom: ( $spacer * 5 );
+			}
+		}
+
 		&--dark-gray {
 			&::before {
 				background-color: $body-bg-lp;
@@ -80,6 +79,18 @@
 
 	.h4--public {
 		margin-bottom: ( $spacer * 2.5 );
+	}
+
+	&.section--first {
+		padding-top: ( $header-height + ( $spacer * .75 ) );
+
+		// Media queries
+		@include media-breakpoint-up(md) {
+			padding-top: ( $header-height + ( $spacer * 3 ) );
+		}
+		@include media-breakpoint-up(xl) {
+			padding-top: ( $header-height + ( $spacer * 1.5 ) );
+		}
 	}
 
 	&--white {
