--- a/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
+++ b/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
@@ -32,6 +32,7 @@
 
 <ng-container
     *ngIf="(supplyPoint | pathValue:['contract', 'deliveryTo']) && supplyPoint.contract.nextContractId &&
+    nextSupplyPoint?.contract?.contractStatus !== ContractStatus.PREPARED_TO_PROLONGATION &&
                      !supplyPoint.contract.isNextContractConcluded && (today | dateDiff: supplyPoint.contract.deliveryTo) as contractEndInDays"
 >
     <div *ngIf="contractEndInDays >= 0" class="row">
