--- a/src/app/pages/public/patterns-of-contracts/patterns-of-contracts.component.html
+++ b/src/app/pages/public/patterns-of-contracts/patterns-of-contracts.component.html
@@ -96,7 +96,7 @@
                                 <div
                                     *ngIf="pdfOldContracts && pdfOldContracts.length"
                                     class="col-12">
-                                    <h5>Archiv smluv o dodávce elektřiny společnosti Power Central Europe, a.s. pro domácnosti</h5>
+                                    <h5>Archiv smluv o dodávce elektřiny společnosti Power Exchange Central Europe, a.s. pro domácnosti</h5>
                                     <lnd-table
                                         [withoutBorder]="true"
                                         [cols]="historyTableCols"
