--- a/src/common/containers/form/forms/ask-for-offer/ask-for-offer-container.component.html
+++ b/src/common/containers/form/forms/ask-for-offer/ask-for-offer-container.component.html
@@ -40,7 +40,7 @@
                 {{ errors[0] }}<br />
             </lnd-alert>
             <lnd-alert *ngIf="success" type="success">
-                Děkujeme po zpracování vaší žádosti se vám obratem ozveme.
+                Děkujeme. Po zpracování vaší žádosti se vám obratem ozveme.
             </lnd-alert>
             <ng-container *ngIf="!fileUploader.isUploading">
                 <span
