--- a/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
+++ b/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
@@ -4,7 +4,7 @@
 >
     <div class="col-12 col-xl-10 offset-xl-1">
         <lnd-banner-ui
-            buttonLabel="Doknčit rozpacovanou smlouvu (novou)"
+            buttonLabel="Dokončit rozpacovanou smlouvu (novou)"
             [data]="{
                     text: 'Some texts'
                 }"
@@ -19,7 +19,7 @@
 >
     <div class="col-12 col-xl-10 offset-xl-1">
         <lnd-banner-ui
-            buttonLabel="Otevrit uzavrenou smlouvu (novou)"
+            buttonLabel="Otevřít uzavřenou smlouvu (novou)"
             [data]="{
                     text: 'Some texts'
                 }"
