--- a/src/assets/scss/05_pages/error-page.scss
+++ b/src/assets/scss/05_pages/error-page.scss
@@ -74,8 +74,8 @@
 	height: calc( 100vh - ( 2 * #{$spacer} )  );
 	margin-top: $spacer;
 
-	@media only screen and (min-width: 768px) {
-		margin-top: -$logo-height-tablet;
+	@media only screen and (min-width: 1366px) {
+		margin-top: -$logo-height-desktop;
 	}
 
 	p {
