--- a/src/assets/scss/05_pages/public-pages.scss
+++ b/src/assets/scss/05_pages/public-pages.scss
@@ -82,14 +82,17 @@
 	}
 
 	&.section--first {
-		padding-top: ( $header-height + ( $spacer * .75 ) );
+		padding-top: ( $header-height-mobile + ( $spacer * .75 ) );
 
 		// Media queries
 		@include media-breakpoint-up(md) {
-			padding-top: ( $header-height + ( $spacer * 3 ) );
+			padding-top: ( $header-height-mobile + ( $spacer * 3 ) );
 		}
 		@include media-breakpoint-up(xl) {
-			padding-top: ( $header-height + ( $spacer * 1.5 ) );
+			padding-top: ( $header-height-mobile + ( $spacer * 1.5 ) );
+		}
+		@include media-breakpoint-up(lg) {
+			padding-top: ( $header-height-desktop + ( $spacer * 1.5 ) );
 		}
 	}
 
