PXEPR-1647 - link update

--- a/src/app/pages/consumers/dashboard/dashboard.component.html
+++ b/src/app/pages/consumers/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
                     'Zadejte odběrné místo a my vám hned dáme nabídky'
                 "
                 [buttonLabel]="'Nové odběrné místo'"
-                (buttonAction)="navigateConsumerService.navigateToRequestStepByProgressStatus(ProgressStatus.SUPPLY_POINT)"
+                (buttonAction)="navigateConsumerService.navigateToRequestStepByProgressStatus(ProgressStatus.SIGNBOARD)"
             ></lnd-info-banner>
         </div>
     </div>
